--- a/index.css
+++ b/index.css
@@ -84,3 +84,129 @@ button
     background-color: #2F3E53; /* Set the color */
     margin: 20px 0 ; /* Adjust the spacing as needed */
 }
+
+.button-container 
+{
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+
+.dropdown{
+    display: inline-block;
+    margin-left: 140px;    
+}
+.dropdown button
+{
+    background-color: hsl(0%, 0%, 80%);
+    color: black;
+    padding: 1px 15px;
+    height: 30px;
+    width: 50px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    
+}
+.dropdown a
+{
+    display: block;
+    text-decoration: none;
+    padding: 10px 15px;
+    color: #55F991;
+}
+.dropdown .content
+{
+    display: none;
+    position: absolute;
+    background-color: #2F3E53;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    min-width: 65px;
+    right: 50%;
+    top: 30%;
+    border-radius: 15px;
+    z-index: 1;
+}
+.dropdown:hover .content
+{
+    display: block;
+    color: white;
+    text-decoration: none;
+}
+.dropdown:hover button
+{
+    background-color: hsl(0%, 0%, 70%);
+}
+.dropdown a:hover
+{
+    background-color: hsl(0%, 0%, 90%);
+    
+}
+
+.dropdown .content a:hover 
+{
+    background-color: hsl(50%, 40%, 90%);
+    color: white;
+}
+
+.toggles {
+    margin-left: 40px;
+    margin-top: 10px;
+}
+
+.toggles .switch {
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+    position: relative;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    font-family: "Karla", sans-serif;
+    color: white;
+}
+
+.toggles .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.toggles .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: 0.4s;
+    border-radius: 34px;
+}
+
+.toggles .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: 0.4s;
+    border-radius: 50%;
+}
+
+.toggles input:checked + .slider {
+    background-color: #10B981;
+}
+
+.toggles input:checked + .slider:before {
+    transform: translateX(26px);
+}
+
+.toggles .switch label {
+    position: absolute;
+    top: 7px;
+    font-size: 15px;
+    margin-top: 40px;
+    margin-left: 5px;
+}
