--- a/index.css
+++ b/index.css
@@ -115,6 +115,11 @@ button
     padding: 10px 15px;
     color: #55F991;
 }
+
+.dropdown {
+    position: relative; /* Ensure the dropdown container is relatively positioned */
+}
+
 .dropdown .content
 {
     display: none;
@@ -122,7 +127,7 @@ button
     background-color: #2F3E53;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
     min-width: 65px;
-    right: 50%;
+    right: -10%;
     top: 30%;
     border-radius: 15px;
     z-index: 1;
